public/css/mainPage.css
/* ... */
#search-form-and-results-container {
    width: 35%;
    max-height: 280px;
    position: absolute;
    z-index: 99;
    bottom: 0;
    left: 90px;
    /* don't overlap with colorscale div */
    background: white;
}

#search-form {
    width: 140px;
    float: left;
}

#search-form .form-group {
    margin-bottom: 0 !important;
    background-color: white;
}

#search-form .form-group .form-control {
    width: 70% !important;
    float: left;
}

#search-form-results {
    position: relative;
    width: 100%;
    height: 100%;
    float: left;
}

#subset-swath-popup {
    position: absolute;
    display: none;
    max-height: 200px;
    overflow-y: auto;
    width: 50%;
    max-width: 560px;
    bottom: 0;
    overflow-y: auto;
    z-index: 99;
    background-color: white;
}

#subset-swath-table > thead > tr {
    background-color: gray;
    color: white;
}

#subset-swath-table td {
    word-break: break-all;
    border-bottom: 1px solid #eee;
}
#subset-swath-table > tbody tr {
    cursor: pointer;
}
#search-form-results-table {
    font-size: 12px;
}

#search-form-results-table thead > tr {
    height: 40px;
    background-color: gray;
    color: white;
}

#search-form-results-table td {
    position: relative;
}

#search-form-and-results-minimize-button {
    position: fixed;
}

.show-children-button {
    position: absolute;
    top: 50%;
    left: 50%;
}

.minimize-button,
.maximize-button {
    display: block;
    padding: 0 !important;
    border: 0 !important;
    width: 16px;
    height: 16px;
    background-image: url(https://cdnjs.cloudflare.com/ajax/libs/extjs/6.0.0/classic/theme-neptune/resources/images/tools/tool-sprites.png) !important;
    background-color: grey;
}

.minimize-button {
    background-position: 0 -208px;
}

.maximize-button {
    background-position: 0 -224px;
}

.maximize-buttons-container {
    position: absolute;
    right: 3%;
    bottom: 10px;
    z-index: 98;
}

#seismicity-maximize-buttons-container, #insar-maximize-buttons-container {
    display: none;
}

.maximize-buttons-container > .btn.btn-primary {
    background-color: white !important;
    border: none;
    float: left;
}

.maximize-button-container {
    width: 33%;
    height: 16px;
    float: left;
}

.maximize-button-container {
    width: 16px;
    height: 16px;
    background-color: #b8b8b8;
    display: inline-block;
    margin: 0 4px 0 4px;
}

.clickable-button:active {
    background-color: #dcdee2 !important;
}

#areas-under-mouse-table {
    margin: 0 !important;
}

#areas-under-mouse-table td {
    display: flex;
}

.preview-attributes-button {
    text-align: center;
    border-width: 1px;
    color: white;
}

.mapboxgl-popup {
    opacity: 0.8;
    /*width: 170px;*/
}


/*take out popup area name table top line*/

.mapboxgl-popup-content tr td {
    border-top: none !important;
}


/*area information popup with tabs*/

ul.tab {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
    position: fixed;
    width: 87%;
    height: 45px;
}

ul.tab li {
    float: left;
    width: 25%;
}

ul.tab li a {
    color: black;
    text-align: center;
    text-decoration: none;
    transition: 0.3s;
    font-size: 12px;
}

ul.tab li a:hover {
    background-color: #ddd;
}

ul.tab li a:focus,
.tablinks.active {
    background-color: #ccc;
}

.tabcontent {
    /*display: none;*/
    padding-top: 45px;
    border-bottom: 1px solid #ccc;
    border-top: none;
    font-size: 10px !important;
}

.tabcontent h3,
.tabcontent p {
    font-size: 14px;
    font-family: "Open Sans" !important;
    color: black !important;
}

#information-div-buttom-buttons div {
    float: left;
}

/* fixed table headers */
.table-fixed thead {
    width: 97%;
}
.table-fixed tbody {
    max-height: 230px;
    overflow-y: auto;
    width: 100%;
}
.table-fixed td {
    padding: 0 !important;
}
.table-fixed tbody > tr {
    height: 35px;
}
.table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
    display: block;
}
.table-fixed tbody td, .table-fixed thead > tr> th {
    float: left;
    border-bottom-width: 0;
}
.col-half-offset {
    margin-left:4.166666667%
}

@media handheld,
screen and (max-width:880px) {
    #USGSEvents-options {
        top: 100px;
        left: 50%;
    }
}

